fix: border clipping for no border

--- a/modules/border.css
+++ b/modules/border.css
@@ -175,6 +175,23 @@ body > hbox {
 }
 
 /* ====== WEBVIEW BORDER ====== */
+@media not (-moz-pref("wireframe.webview.border")){
+    /* content window border size on RIGHT side tabbar */
+    :root[zen-right-side="true"]:not([zen-compact-mode="true"]):not(
+            [inDOMFullscreen="true"]
+        )
+        #zen-tabbox-wrapper {
+        border: 0.1px solid transparent !important;
+    }
+
+    /* content window border size on LEFT side tabbar */
+    :root:not([zen-right-side="true"]):not([zen-compact-mode="true"]):not(
+            [inDOMFullscreen="true"]
+        )
+        #zen-tabbox-wrapper {
+        border: 0.1px solid transparent !important;
+    }
+}
 
 @media (-moz-pref("wireframe.webview.border", "wireframe")){
     /* content window border size on RIGHT side tabbar */
